Closed Bug 1161079 Opened 10 years ago Closed 10 years ago

Logging of encoder stats in WebRTC broken by multistream landing

Categories

(Core :: WebRTC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox38 --- wontfix
firefox38.0.5 --- wontfix
firefox39 --- fixed
firefox40 --- fixed
firefox-esr38 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1159489 +++ Spun off the issue with encoder stats being broken since multistream landedi n Fx38 found in bug 1159489 Patch is already r=jib
Assignee: nobody → rjesup
Status: NEW → ASSIGNED
Comment on attachment 8600948 [details] [diff] [review] Fix VideoCodecStats to allow for collecting encoder and decoder stats Carry forward r=jib
Attachment #8600948 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Comment on attachment 8600948 [details] [diff] [review] Fix VideoCodecStats to allow for collecting encoder and decoder stats [Approval Request Comment] If this is not a sec:{high,crit} bug, please state case for ESR consideration: I want this for ESR since this enhances the ability of users to report issues with WebRTC. [Feature/regressing bug #]: Bug 1130534 (merging video conduits) [User impact if declined]: No encoder stats are available for about:webrtc [Describe test coverage new/current, TreeHerder]: Manual testing of about:webrtc [Risks and why]: quite low risk; just ensures it registers for all the appropriate callbacks instead of only the first (of decoder or encoder) [String/UUID change made/needed]: none
Attachment #8600948 - Flags: approval-mozilla-esr38?
Attachment #8600948 - Flags: approval-mozilla-aurora?
Comment on attachment 8600948 [details] [diff] [review] Fix VideoCodecStats to allow for collecting encoder and decoder stats Approved for uplift to aurora.
Attachment #8600948 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
ESR 38.0 already was built on Monday. So unless this is a security fix it may need to wait for the next release of ESR (38.1).
Attachment #8600948 - Flags: approval-mozilla-esr38? → approval-mozilla-esr38+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: