Bug 1161079 - Fix VideoCodecStats to allow for collecting encoder and decoder stats. r=jib, a=lizzard